# data-analyst-agent

./: .gitignore  AGENT_EVALUATION.md  CLAUDE.md  PROJECT_REPORT.md  README.md  app.py  data-analyst-agent-plan.md  data-analyst-agent-requirements.md  dev-log.md  pyproject.toml
src/: config.py
src/agent/: base.py  client.py  langgraph_loop.py  lg_tools.py  loop.py  multi_prompt.py  system_prompt.py  tools.py  viz_planner.py
src/agent/providers/: anthropic_provider.py  openai_provider.py
src/data/: join_detector.py  layout.py  loader.py  registry.py  schema.py
src/db/: connection.py  executor.py  schema.py
src/eda/: auto_eda.py  report.py
src/execution/: backend.py  backend_factory.py  chart_validator.py  docker_executor.py  e2b_executor.py  python_executor.py  result.py
src/text/: analyzer.py  eda.py
src/ui/: chat_panel.py  eda_panel.py  layout_panel.py  sql_panel.py  styles.py  upload_panel.py
test_data/: customers.csv  orders.csv  products.csv
tests/: conftest.py  test_agent_loop.py  test_auto_eda.py  test_backend_factory.py  test_chart_validator.py  test_json_loader.py  test_layout.py  test_loader.py  test_python_executor.py  test_schema.py  test_sql_executor.py  test_text_analyzer.py  test_text_eda.py  test_tools.py  test_viz_planner.py
tests/fixtures/: nested.json  sales.xlsx  sample.json
