[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "data-analyst-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35",
    "anthropic>=0.28",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
    "tabulate>=0.9",
    "sqlalchemy>=2.0",
    "plotly>=5.0",
    # LangGraph orchestration (feat/langgraph branch)
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
all = [
    "openai>=1.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
